# debshrew

./: .gitignore  CDC_TESTING.md  CONSUMER_SETUP.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  quick-consumer.sh  run-debshrew-with-consumer.sh  run-test-consumer.sh  run.sh  run_tests.sh  setup-and-run-consumer.sh  test-cdc-flow.sh
debshrew/: Cargo.toml  build.rs
debshrew-minimal/: Cargo.toml
debshrew-minimal/src/: lib.rs
debshrew-runtime/: Cargo.toml
debshrew-runtime/src/: exports.rs  imports.rs  lib.rs  stdio.rs  transform.rs  wasm.rs
debshrew-runtime/src/test_utils/: mod.rs
debshrew-runtime/tests/: println_test.rs
debshrew-support/: Cargo.toml
debshrew-support/src/: error.rs  serialization.rs  types.rs  utils.rs
debshrew-test-consumer/: Cargo.toml  README.md  config.json  run-consumer.sh  run-with-hosts.sh
debshrew-test-consumer/src/: main.rs
debshrew/src/: adapters.rs  block.rs  client.rs  lib.rs  main.rs  runtime.rs  synchronizer.rs  traits.rs
debshrew/src/sink/: mod.rs
debshrew/src/tests/: README.md  block_builder.rs  comprehensive_e2e_test.rs  integration_tests.rs  mod.rs  reorg_focused_test.rs
examples/: test_logging_transform.rs  test_metashrew_api.rs  test_minimal_transform.rs  test_wasm_module.rs
examples/logging-transform/: Cargo.toml
examples/logging-transform/src/: lib.rs
examples/minimal-transform/: Cargo.toml
examples/minimal-transform/src/: lib.rs
examples/sample-transform/: Cargo.toml  sink-config.json
examples/sample-transform/src/: lib.rs
examples/view-test-transform/: Cargo.toml
examples/view-test-transform/src/: lib.rs
test-getblock/: Cargo.toml
test-getblock/src/: main.rs
