[package]
name = "debshrew-minimal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
debshrew-runtime = { path = "../debshrew-runtime" }
debshrew-support = { path = "../debshrew-support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[features]
std = []