[package]
name = "debshrew-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
debshrew-support = { path = "../debshrew-support" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
protobuf = "3.2"

[features]
test-utils = []

[dev-dependencies]
wat = "1.0"
