[package]
name = "test-getblock"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
bitcoin = "0.32.6"
protobuf = "3.4.0"
alkanes-support = { path = "../reference/alkanes-rs/crates/alkanes-support" }