[package]
name = "logging-transform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
debshrew-runtime = { path = "../../debshrew-runtime" }
debshrew-support = { path = "../../debshrew-support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"